--- a/YOUTUBE.html
+++ b/YOUTUBE.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0117)http://127.0.0.1:5500/Youtube%20free%20video%20downlode%20by%20varshil%20prajapati%20(10_1_2022%203_10_36%20PM).html? -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Varshil prajapati</title>
-    <link rel="stylesheet" type="text/css" href="./Varshil prajapati_files/css1.css">
+    <link rel="stylesheet" type="text/css" href="./prajapati_files/css1.css">
 <style type="text/css">@font-face { font-family: Roboto; src: url("chrome-extension://mcgbeeipkmelnpldkobichboakdfaeon/css/Roboto-Regular.ttf"); }</style></head>
 <body class="bg-dark">
       
